--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "latte/latte": "^2.11",
         "bramus/router": "^1.6",
         "josegonzalez/dotenv": "dev-master",
-        "pablouser1/tikscraper": "^2.3"
+        "pablouser1/tikscraper": "dev-master"
     },
     "autoload": {
         "psr-4": {
